crates/harness-tui/src/snapshots/harness_tui__completed_shell_fallback_lifecycle.snap
---
source: crates/harness-tui/src/lib_tests.rs
expression: "fallback_render.lines().map(str::trim_end).collect::<Vec<_>>().join(\"\\n\")"
---



                Session



                                               Harness
                                         Launch: default · -
                                    Start a conversation to begin
                    “inspect src/ui.rs” · “trace the failing test” · “review the
                                            latest edit”
                        Enter send · Shift+Enter/Ctrl+j newline · ↑/↓ history





              ┃
              ┃
              ┃
              ┃   Ready   default · local/-
              ╹▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
              ready for first turn            Tab focus  ·  Ctrl+p commands  ·  q quit
