crates/harness-tui/src/snapshots/harness_tui__completed_shell_lifecycle.snap
---
source: crates/harness-tui/src/lib_tests/startup_lifecycle_surface.rs
expression: "completed_shell_render.lines().map(str::trim_end).collect::<Vec<_>>().join(\"\\n\")"
---

             ui-ux-experiments ~/Projects/agent-harness/crates/harness-tui

            Waiting for first turn…















            ╭──────────────────────────────────────────────────────────────────────────╮
            │ ❯ keep this draft                                                        │
            ╰──────────────────────────────────────────────────────────────── unknown ─╯
            ready for first turn                Tab focus  ·  ? commands  ·  Ctrl+q quit
