crates/harness-tui/src/snapshots/harness_tui__lifecycle_shell_inline_completion_fallback_surface.snap
---
source: crates/harness-tui/src/lib.rs
assertion_line: 8087
expression: "fallback_render.lines().map(str::trim_end).collect::<Vec<_>>().join(\"\\n\")"
---








                  ┌──────────────────────────────────────────────────────────────┐
                  │                            Harness                           │
                  │                  Preset default · local/-                    │
                  │                                                              │
                  │                 Start a conversation to begin                │
│     Enter send · Shift+Enter/Ctrl+j newline · ↑/↓ history    │
                  └──────────────────────────────────────────────────────────────┘






            Ready   run finished · session shell preserved  ·  orch 0a 0q 0r 0s
           ──────────────────────────────────────────────────────────────────────────────
           ▎ Run complete — use ctrl+p commands for replay/new/quit, or ask Harness for……
           Tab focus  ? shortcuts  q quit
