crates/harness-tui/src/snapshots/harness_tui__lifecycle_shell_post_run_fallback_surface.snap
---
source: crates/harness-tui/src/lib.rs
expression: normalize_snapshot(fallback_render)
---





              ┌Next action───────────────────────────────────────────────────────────┐
              │                             Recovery only                            │
              │                    current run cannot be reopened                    │
              │      No reopen target is available · start fresh or quit safely      │
              │ › + Start another session · launch a fresh session                   │
              │   × Quit · close the TUI                                             │
              │                                                                      │
              │                                                                      │
              │       Reopen stays blocked until a valid session target exists.      │
              └──────────────────────────────────────────────────────────────────────┘




            Success   run finished · choose what to do next  ·  agents 0 · queued 0



           ↑ prev  ↓ next  Enter select  2 events  3 diff  4 help  q quit
