crates/harness-tui/src/snapshots/harness_tui__lifecycle_shell_post_run_surface.snap
---
source: crates/harness-tui/src/lib.rs
expression: normalize_snapshot(post_run_render)
---
           run run_fixture · unknown/unknown · -




              ┌Next action───────────────────────────────────────────────────────────┐
              │                          Continue available                          │
              │                 run finished · choose what to do next                │
              │            Continue resumes live · Replay stays read-only            │
              │ › ▶ Continue this session · resume this run live from the composer   │
              │   ↺ Replay this run · inspect the run read-only                      │
              │   + Start another session · launch a fresh session                   │
              │   × Quit · close the TUI                                             │
              │  Action order stays fixed: Continue → Replay → Start another → Quit  │
              └──────────────────────────────────────────────────────────────────────┘




            Success   run finished · choose what to do next  ·  agents 0 · queued 0



           ↑ prev  ↓ next  Enter select  2 events  3 diff  4 help  q quit
