crates/harness-tui/src/snapshots/harness_tui__lifecycle_shell_session_picker.snap
---
source: crates/harness-tui/src/lib.rs
assertion_line: 4834
expression: "format!(\"CONTINUE\\n{}\\n\\nREPLAY\\n{}\", normalize_snapshot(continue_render),
normalize_snapshot(replay_render))"
---
CONTINUE








                         ┌Harness─────────────────────────────────────────────────────────────┐
              ┌Continue session · 2 matches · 1 blocked──────────────────────────────────────────────────┐
              │> █                                                                                       │
              │Interactive histories · 1 ready · 1 blocked · blocked rows stay visible                   │
              │▶ continue alpha-run · continue ready · finished · deep/openai/gpt-5.4                    │
              │! blocked blocked-interactive · continue blocked · run is still active · running · ops/ope│
              │                                                                                          │
              │                                                                                          │
              │                                                                                          │
              │                                                                                          │
              │                                                                                          │
              └──────────────────────────────────────────────────────────────────────────────────────────┘





   Ready   startup launcher ready · choose New/Continue/Replay or type to quick-start  ·  agents 0 · queued 0
  ┌Composer · 1 line · 15 chars──────────────────────────────────────────────────────────────────────────────────────┐
  │keep this draft█                                                                                                  │
  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  Enter send  Shift+Enter nl  i details  2 events  3 diff  4 help  q quit

REPLAY








                         ┌Harness─────────────────────────────────────────────────────────────┐
              ┌Replay session · 3 matches────────────────────────────────────────────────────────────────┐
              │> █                                                                                       │
              │Read-only replays · 3 matching · 1 prompt-only still visible                              │
              │↺ replay alpha-run · replay ready · continue ready · finished · deep/openai/gpt-5.4       │
              │↺ replay beta-prompt · prompt-only replay ready · failed · ops/anthropic/claude-3.7       │
              │↺ replay blocked-interactive · replay ready · blocked: run is still active · running · ops│
              │                                                                                          │
              │                                                                                          │
              │                                                                                          │
              │                                                                                          │
              └──────────────────────────────────────────────────────────────────────────────────────────┘





   Ready   startup launcher ready · choose New/Continue/Replay or type to quick-start  ·  agents 0 · queued 0
  ┌Composer · 1 line · 15 chars──────────────────────────────────────────────────────────────────────────────────────┐
  │keep this draft█                                                                                                  │
  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  Enter send  Shift+Enter nl  i details  2 events  3 diff  4 help  q quit
