crates/harness-tui/src/snapshots/harness_tui__lifecycle_shell_startup_surface.snap
---
source: crates/harness-tui/src/lib.rs
assertion_line: 4738
expression: normalize_snapshot(startup_render)
---





               ┌Harness─────────────────────────────────────────────────────────────┐
               │                 Preset worker · mock/model-1 · Demo                │
               │   Dispatch a new run, reopen live work, or inspect saved history.  │
               │ + New session · dispatch a fresh run from the draft below          │
               │ ▶ Continue session · reopen interactive work · 1 ready             │
               │ ↺ Replay session · inspect saved runs read-only · 1 available      │
               │            1 saved run ready across Continue and Replay            │
               │    Type to quick-start a fresh run · Ctrl+P opens session tools    │
               └────────────────────────────────────────────────────────────────────┘





            Ready   startup launcher ready · choose New/Continue/Replay or type to quick-
           ┌Composer · 1 line · 0 chars─────────────────────────────────────────────────┐
           │Type to quick-start a new session while the lifecycle actions stay          │
           └────────────────────────────────────────────────────────────────────────────┘
           ↑ prev  ↓ next  Enter select  Tab composer  Ctrl+p palette  q quit
