crates/harness-tui/src/snapshots/harness_tui__live_empty_state_snapshot_renders_input_first_shell.snap
---
source: crates/harness-tui/src/lib.rs
assertion_line: 8718
expression: "render_live_lines(&app, 80, 24)"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
        ┌──────────────────────────────────────────────────────────────┐        
        │                            Harness                           │        
        │                  Preset unknown · unknown/-                  │        
        │                                                              │        
        │                 Start a conversation to begin                │        
│     Enter send · Shift+Enter/Ctrl+j newline · ↑/↓ history    │
        └──────────────────────────────────────────────────────────────┘        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Ready   ready for first turn  ·  orch 0a 0q 0r 0s                             
 ────────────────────────────────────────────────────────────────────────────── 
 ▎ Ask Harness to inspect, edit, or explain…                                    
Enter send  Shift+Enter/Ctrl+j nl  Ctrl+p commands  q quit
