crates/harness-tui/src/snapshots/harness_tui__live_shell_details_drawer.snap
---
source: crates/harness-tui/src/lib.rs
expression: rendered
---
 run run_fixture · unknown/openai · gpt-5-codex                                 
  › user · req_001                                                              
    Explain the refactor                                                        
  ●  done  assistant · openai/gpt-5-codex                                       
    Working through the steps.                                                  
    ╭─ tool fs.read  succeeded                                                  
    │ args   path=src/app.rs                                                    
    │ result tool output                                                        
    ╰─ ● call tool_call_1 · 1 permission                                        
                                                                                
                                                                                
  ○ Activity · follow                                                           
  › req_001 · gpt-5-codex ·  done                                               
  ● Details                                                                     
  Activity metadata:                                                            
  Request ID: req_001                                                           
  Provider: openai                                                              
  Model: gpt-5-codex                                                            
  Status: done                                                                  
  Success   turn 1/1 · req_001 · openai/gpt-5-codex · ready for next turn       
 ┌Composer · 1 line · 0 chars─────────────────────────────────────────────────┐ 
 │Type a prompt for the next turn…                                            │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 Enter send  Shift+Enter nl  i close  2 events  3 diff  4 help  q quit
